text spacing correction

--- a/src/style/styleComponents/HousingCards.css
+++ b/src/style/styleComponents/HousingCards.css
@@ -14,6 +14,7 @@
 .housing-card h2{
     font-size: 18px;
     line-height: 142.6%;
+    font-weight: 500;
     color: #FFFFFF;
     background-color: #0202022a;
     height: 52px;
