--- a/src/style/stylePages/Home.css
+++ b/src/style/stylePages/Home.css
@@ -21,7 +21,7 @@
     width: 100%;
     height: 100%;
     border-radius: 10px;
-    transform: translate(-0%, -104%);
+    transform: translate(-0%, -100%);
 }
 
 #title-home{
@@ -62,7 +62,7 @@
 
     #title-bg{
         border-radius: 25px;
-        transform: translate(-0%, -101%);
+        transform: translate(-0%, -100%);
     }
 
     #title-home{
